<resources>
    <string name="app_name">LearnTest</string>
    <string name="error_invalid_credentials">Invalid Credentials</string>
</resources>
